fix(hide-balance): remove overlapping top brush layer causing broken seam

--- a/css/hide-balance.css
+++ b/css/hide-balance.css
@@ -6,14 +6,7 @@
 }
 
 .hide-balance-section::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 52px;
-  background: url('../images/separator-blue3.png') center top / cover no-repeat;
-  opacity: 1;
+  content: none;
 }
 
 .hide-balance-section::after {
